fix: removed z-index of slider handles. Closes #682

--- a/src/components/columns-width-control/editor.scss
+++ b/src/components/columns-width-control/editor.scss
@@ -56,7 +56,6 @@
 	[role="slider"] {
 		position: absolute;
 		transform: translate(-50%, -50%);
-		z-index: 2;
 		width: 10px;
 		height: 10px;
 		padding: 0;
